# llm-sdk

./: Cargo.toml  README.md
src/: claude.rs  codex.rs  lib.rs  message_log.rs  openai.rs  openai_shared.rs  openrouter.rs  sandbox.rs  session.rs  stream.rs
src/tools/: bash.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
