[package]
name = "llm-sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "LLM SDK for Claude CLI and OpenRouter API"
repository = "https://github.com/Osso/llm-sdk"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "time", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
glob = "0.3"
regex = "1"
walkdir = "2"
tracing = "0.1"
which = "7"
dirs = "6"
